# xianghuo_detect

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: training_config.yaml  valid_config.yaml
models/: busy_mingming-box_area_seg-20250804.pt  busy_mingming-box_detect-20250820.pt
scripts/: run_predict.sh  run_train.sh  run_valid.sh
src/: __init__.py  main.py  predict_yolo.py  split_dataset.py  train_yolo.py  valid_yolo.py
utils/: __init__.py  dataset_toolkit.py
